--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2>mama i can code now</h2>
     <h3>New code changed</h3>
+    <p>i am  coding code</p>
+    <p>more paragarap</p>
     
 </body>
 </html>
